Adjusted cmakelist and tests
- added apple specific compiler options
- added small python tests

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,6 +1,6 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+cmake_minimum_required(VERSION 2.8)
 
-PROJECT(revolve-brain)
+project(revolve-brain)
 
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR CMAKE_COMPILER_IS_GNUCXX)
     include(CheckCXXCompilerFlag)
@@ -9,20 +9,36 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR CMAKE_COMPILER_IS_GNUCXX)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++11")
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --std=c++11")
     else()
-        message(ERROR "Compiler does not support --std=c++11")
+        message(FATAL_ERROR "Compiler does not support --std=c++11")
     endif()
 endif()
 
-FIND_PACKAGE(PythonLibs)
-FIND_PACKAGE(Boost COMPONENTS python3 thread)
+find_package(Boost REQUIRED COMPONENTS system python3)
+set(Boost_USE_STATIC_LIBS OFF)
+set(Boost_USE_MULTITHREADED ON)
+set(Boost_USE_STATIC_RUNTIME OFF)
 
-INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR})
+if (${APPLE})
+    set(PYTHON_INCLUDE_DIRS "/usr/include/python3.5m" "/usr/include/")
+    set(Python_LIBRARIES "/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/config-3.5m/libpython3.5m.a")
+else()
+    find_package(PythonLibs REQUIRED)
+endif()
 
-ADD_LIBRARY(revolve-brain SHARED brain/neuralnetwork.cpp brain/actuator.cpp brain/sensor.cpp)
-PYTHON_ADD_MODULE(revolve_brain_python brain/python/brain.cpp)
+include_directories(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR})
 
-TARGET_LINK_LIBRARIES(revolve-brain ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
-TARGET_LINK_LIBRARIES(revolve_brain_python revolve-brain)
+add_library(revolve-brain SHARED brain/neuralnetwork.cpp brain/actuator.cpp brain/sensor.cpp)
+python_add_module(revolve_brain_python brain/python/brain.cpp)
+
+target_link_libraries(revolve-brain ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
+target_link_libraries(revolve_brain_python revolve-brain)
 
 install(TARGETS revolve-brain DESTINATION lib)
 #install(TARGETS revolve_brain_python DESTINATION lib)
+
+#if tests are enabled
+enable_testing()
+file(COPY brain/python/import_test.py DESTINATION .)
+file(COPY brain/python/neuralnetwork_test.py DESTINATION .)
+add_test(00-Import python3 -m unittest import_test.py)
+add_test(02-NeuralNetwork python3 -m unittest neuralnetwork_test.py)
