--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -54,7 +54,8 @@ include_directories(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${PROJECT_SOURC
 
 
 # Compiling ####################################################################
-add_library(revolve-brain SHARED brain/rlpower.cpp brain/neural_network.cpp brain/actuator.cpp brain/sensor.cpp)
+add_library(revolve-brain SHARED brain/rlpower.cpp brain/neural_network.cpp)
+add_library(revolve-brain-static STATIC brain/rlpower.cpp brain/neural_network.cpp)
 python_add_module(revolve_brain_python brain/python/brain.cpp)
 
 
