--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -62,7 +62,7 @@ include_directories(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${PROJECT_SOURC
 # Compiling ####################################################################
 add_library(revolve-brain SHARED brain/rlpower.cpp brain/neural_network.cpp)
 add_library(revolve-brain-static STATIC brain/rlpower.cpp brain/neural_network.cpp)
-python_add_module(revolve_brain_python brain/python/brain.cpp)
+python_add_module(revolve_brain_python brain/python/brain.cpp brain/python/rlpower_python.cpp)
 
 
 # Linking ######################################################################
