enabled supg in python and added test

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -102,16 +102,18 @@ install(TARGETS revolve-brain DESTINATION lib)
 # Tests ########################################################################
 #if tests are enabled
 enable_testing()
-file(COPY brain/python/import_test.py DESTINATION .)
-file(COPY brain/python/neuralnetwork_test.py DESTINATION .)
-file(COPY brain/python/sensor_test.py DESTINATION .)
-file(COPY brain/python/actuator_test.py DESTINATION .)
-file(COPY brain/python/rlpower_test.py DESTINATION .)
+file(COPY brain/python/test/import_test.py DESTINATION .)
+file(COPY brain/python/test/neuralnetwork_test.py DESTINATION .)
+file(COPY brain/python/test/sensor_test.py DESTINATION .)
+file(COPY brain/python/test/actuator_test.py DESTINATION .)
+file(COPY brain/python/test/rlpower_test.py DESTINATION .)
+file(COPY brain/python/test/supg_test.py DESTINATION .)
 add_test(00-Import python3 -m unittest import_test.py)
 add_test(01-Sensor python3 -m unittest sensor_test.py)
 add_test(01-Actuator python3 -m unittest actuator_test.py)
 add_test(03-NeuralNetwork python3 -m unittest neuralnetwork_test.py)
 add_test(04-RLPower python3 -m unittest rlpower_test.py)
+add_test(05-SUPG python3 -m unittest supg_test.py)
 
 add_executable(testAsyncNeat neat/test/testasyncneat.cpp)
 add_executable(testCustomGenomeManager neat/test/testcustomgenomemanager.cpp)
