Small fixes in CMakeLists.txt to support Mac OSX.

--- a/cpp/neat/accneat/CMakeLists.txt
+++ b/cpp/neat/accneat/CMakeLists.txt
@@ -4,9 +4,8 @@ PROJECT( accneat )
 
 SET(CMAKE_CXX_STANDARD 11)
 
-IF(NOT WITHOUT_OPENMP)
+IF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     FIND_PACKAGE(OpenMP REQUIRED)
-    message("BUILDING WITH OPENMP SUPPORT. To disable it, run add `-DWITHOUT_OPENMP=1` to your cmake parameters ")
 ELSE()
     message("BUILDING WITHOUT OPENMP SUPPORT")
 ENDIF()
