--- a/cpp/brain/cpg/CMakeLists.txt
+++ b/cpp/brain/cpg/CMakeLists.txt
@@ -3,4 +3,5 @@ cmake_minimum_required(VERSION 2.8)
 
 add_library(cpg STATIC
         RythmGenerationNeuron.cpp
+        PatternFormationNeuron.cpp
 )
