--- a/cpp/brain/python/CMakeLists.txt
+++ b/cpp/brain/python/CMakeLists.txt
@@ -5,19 +5,36 @@ find_package(PythonLibs REQUIRED)
 find_package(Boost COMPONENTS system python3)
 message(STATUS "boost: ${Boost_FOUND} - system: ${Boost_SYSTEM_FOUND} - python3: ${Boost_PYTHON3_FOUND}")
 
-if (NOT ${Boost_PYTHON3_FOUND})
+if (NOT ${Boost_FOUND})
     if (${APPLE})
         message(FATAL_ERROR "boost python3 not found, try to run command\n"
                 "$ brew install boost-python --without-python --with-python3")
     endif()
 
-    # try python-py34 for raspberry
-    message(STATUS "boost python3 not found, searching for python-py34")
-    find_package(Boost COMPONENTS system python-py34)
-    if (NOT $Boost_PYTHON3_FOUND)
-        message(STATUS "boost python-py34 not found, searching for python-py35")
-        find_package(Boost REQUIRED COMPONENTS system python-py35)
+    # try python-py35 for debian
+    message(STATUS "boost python3 not found, searching for python-py35")
+    find_package(Boost COMPONENTS system python-py35)
+    if (NOT ${Boost_FOUND})
+        message(STATUS "boost python-py35 not found, searching for python-py34")
+        find_package(Boost COMPONENTS system python-py34)
     endif()
+    if (NOT ${Boost_FOUND})
+        message(STATUS "boost python-py34 not found, searching for python-py33")
+        find_package(Boost COMPONENTS system python-py33)
+    endif()
+    if (NOT ${Boost_FOUND})
+        message(STATUS "boost python-py33 not found, searching for python-py32")
+        find_package(Boost COMPONENTS system python-py32)
+    endif()
+    if (NOT ${Boost_FOUND})
+        message(STATUS "boost python-py32 not found, searching for python-py31")
+        find_package(Boost COMPONENTS system python-py31)
+    endif()
+
+    if (NOT ${Boost_FOUND})
+        message(FATAL_ERROR "boost python not found")
+    endif()
+    message(STATUS "boost: ${Boost_FOUND} - system: ${Boost_SYSTEM_FOUND} - python3: ${Boost_PYTHON3_FOUND}")
 endif()
 
 if (${APPLE})
