--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,72 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+build/*
+output/*
+scripts/output/*
 
-# Precompiled Headers
-*.gch
-*.pch
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
 
-# Compiled Dynamic libraries
+# C extensions
 *.so
-*.dylib
-*.dll
 
-# Fortran module files
-*.mod
+# Distribution / packaging
+.Python
+env/
+/build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
-# Executables
-*.exe
-*.out
-*.app
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
-# Python-related files
-*.pyc
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*,cover
 
-# Platform-specific files
-.AppleDouble
-.DS_Store
-._.DS_Store
+# Translations
+*.mo
+*.pot
 
-# IDE-specific files
+# Django stuff:
+*.log
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# PyCharm project files
 .idea
-*.kdev4
 
-# Miscelaneous
-build
-dist
+# Virtual env
+.venv
+
+# Experimental output
+output/
+*.policy
+
