--- a/.gitignore
+++ b/.gitignore
@@ -1,72 +1,43 @@
-build/*
-output/*
-scripts/output/*
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
 
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
+# Precompiled Headers
+*.gch
+*.pch
 
-# C extensions
+# Compiled Dynamic libraries
 *.so
+*.dylib
+*.dll
 
-# Distribution / packaging
-.Python
-env/
-/build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
+# Fortran module files
+*.mod
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# Executables
+*.exe
+*.out
+*.app
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
+# Python-related files
+*.pyc
 
-# Translations
-*.mo
-*.pot
+# Platform-specific files
+.AppleDouble
+.DS_Store
+._.DS_Store
 
-# Django stuff:
-*.log
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# PyCharm project files
+# IDE-specific files
 .idea
 
-# Virtual env
-.venv
-
-# Experimental output
-output/
-*.policy
-
+# Miscelaneous
+build
+dist
