introduction of split brain

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -28,6 +28,9 @@ add_subdirectory("neat/accneat")
 #TODO make include path for accneat nicer
 include_directories("neat/accneat/src")
 
+# add split_cpg
+add_subdirectory("brain/split_cpg")
+
 ### RLPOWER DEPENDENCIES ###
 # GSL
 # Gnu mathematical library
@@ -47,26 +50,14 @@ file(GLOB_RECURSE BRAIN_SRCS
         brain/supg/supgneuron.cpp
         brain/supg/supggenomemanager.cpp
         neat/asyncneat.cpp
-        neat/neatevaluation.cpp 
-        brain/ccpg/extended_neural_network.cpp
-	brain/ccpg/neuron.cpp
-	brain/ccpg/differential_cpg.cpp
-	brain/ccpg/bias_neuron.cpp
-	brain/ccpg/input_neuron.cpp
-	brain/ccpg/leaky_integreator.cpp
-	brain/ccpg/linear_neuron.cpp
-	brain/ccpg/neural_connection.cpp
-	brain/ccpg/oscillator_neuron.cpp
-	brain/ccpg/sigmoid_neuron.cpp
-	brain/ccpg/v_oscillator.cpp
-	brain/ccpg/x_oscillator.cpp)
+        neat/neatevaluation.cpp)
 
 # Compiling ####################################################################
 add_library(revolve-brain-static STATIC ${BRAIN_SRCS})
 add_library(revolve-brain SHARED)
 
 # Linking ######################################################################
-target_link_libraries(revolve-brain-static accneat ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${GSL_LIBRARIES} yaml-cpp)
+target_link_libraries(revolve-brain-static accneat split_cpg ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${GSL_LIBRARIES} yaml-cpp)
 target_link_libraries(revolve-brain revolve-brain-static)
 
 
