--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -28,6 +28,8 @@ add_subdirectory("neat/accneat")
 #TODO make include path for accneat nicer
 include_directories("neat/accneat/src")
 
+# add cppneat
+add_subdirectory("brain/cppneat")
 # add split_cpg
 add_subdirectory("brain/split_cpg")
 #add extended neural network
@@ -59,7 +61,7 @@ add_library(revolve-brain-static STATIC ${BRAIN_SRCS})
 add_library(revolve-brain SHARED)
 
 # Linking ######################################################################
-target_link_libraries(revolve-brain-static accneat split_cpg extnn ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${GSL_LIBRARIES} yaml-cpp)
+target_link_libraries(revolve-brain-static accneat split_cpg extnn cppneat ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${GSL_LIBRARIES} yaml-cpp)
 target_link_libraries(revolve-brain revolve-brain-static)
 
 
