--- a/cpp/brain/split_cpg/CMakeLists.txt
+++ b/cpp/brain/split_cpg/CMakeLists.txt
@@ -4,4 +4,6 @@ add_library(split_cpg STATIC
 	    extended_neural_network_controller.cpp
 	    weight_vector_learner.cpp
 	    rlpower_learner.cpp
+	    conversion.cpp
+	    ext_nn.cpp
 )
