--- a/cpp/brain/controller/CMakeLists.txt
+++ b/cpp/brain/controller/CMakeLists.txt
@@ -1,3 +1,11 @@
 add_library(revolve-brain-controller
     spline_controller.cpp
+    ext_nn_net.cpp
+    ext_nn_weights.cpp
+)
+
+add_subdirectory("extnn")
+
+target_link_libraries(revolve-brain-controller 
+	extnn
 )
