fixed mistakes in Neat for layered networks

--- a/cpp/brain/controller/CMakeLists.txt
+++ b/cpp/brain/controller/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(revolve-brain-controller
     spline_controller.cpp
     ext_nn_net.cpp
     ext_nn_weights.cpp
+    layered_ext_nn_net.cpp
 )
 
 add_subdirectory("extnn")
