--- a/cpp/brain/controller/CMakeLists.txt
+++ b/cpp/brain/controller/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(revolve-brain-controller
     spline_controller.cpp
+    policy_controller.cpp
     ext_nn_net.cpp
     ext_nn_weights.cpp
     layered_ext_nn_net.cpp
