Added AccNEAT Base controllers and Learners
and BaseController and BaseLearner CamelCase names

--- a/cpp/brain/controller/CMakeLists.txt
+++ b/cpp/brain/controller/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(revolve-brain-controller
             ExtendedANN.cpp
             ExtendedANNWeights.cpp
             LayeredExtendedANN.cpp
+            AccNEATCPPNController.cpp
             )
 
 add_subdirectory("extnn")
