--- a/cpp/brain/learner/CMakeLists.txt
+++ b/cpp/brain/learner/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(revolve-brain-learner
             BaseLearner.cpp
             NEATLearner.cpp
             RLPowerLearner.cpp
+            AccNEATLearner.cpp
             )
 
 add_subdirectory("cppneat")
