--- a/cpp/brain/learner/CMakeLists.txt
+++ b/cpp/brain/learner/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(revolve-brain-learner
             NEATLearner.cpp
             RLPowerLearner.cpp
             AccNEATLearner.cpp
+            HyperAccNEATLearner_CPGController.cpp
             )
 
 add_subdirectory("cppneat")
