Brain for a generic Learner

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -55,6 +55,7 @@ file(GLOB_RECURSE BRAIN_SRCS
      neat/NEATEvaluation.cpp
      brain/Conversion.cpp
      brain/CPGBrain.cpp
+     brain/GenericLearnerBrain.cpp
 )
 
 # Compiling ####################################################################
