Files renamed to avoid confusion.

--- a/cpp/brain/controller/CMakeLists.txt
+++ b/cpp/brain/controller/CMakeLists.txt
@@ -1,9 +1,9 @@
 add_library(revolve-brain-controller
             SplineController.cpp
             PolicyController.cpp
-            ExtendedANN.cpp
-            ExtendedANNWeights.cpp
-            LayeredExtendedANN.cpp
+            ExtCPPN.cpp
+            ExtCPPNWeights.cpp
+            LayeredExtCPPN.cpp
             AccNEATCPPNController.cpp
             CPGController.cpp
             )
