Add small codestyle corrections 2

--- a/cpp/brain/controller/extnn/CMakeLists.txt
+++ b/cpp/brain/controller/extnn/CMakeLists.txt
@@ -12,4 +12,5 @@ add_library(extnn STATIC
             VOscillator.cpp
             XOscillator.cpp
             InputDependentOscillatorNeuron.cpp
+            RythmGenerationCPG.cpp
             )
